--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ psutil>=5.4.5
 requests>=2.18.4
 scikit-image>=0.13.1
 scipy>=1.1.0
-slidingwindow>=0.0.13
+slidingwindow==0.0.13
 tqdm>=4.23.4
-tensorflow==1.15.0
+tensorflow==1.14.0
 numpy
 imutils
-opencv-python
-opencv-contrib-python
+opencv-python-headless
+opencv-contrib-python-headless
 git+https://github.com/ppwwyyxx/tensorpack.git
