--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-    "python.pythonPath": "env/bin/python3",
+    "python.pythonPath": "/usr/local/bin/python",
     "remote.WSL.fileWatcher.polling": true,
 }
